--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,24 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<!-- Primary Meta Tags -->
+		<meta name="title" content="LoSpeak - Simple Peer-to-Peer Voice Chat" />
+		<meta name="description" content="Simple, shareable rooms for peer-to-peer voice chat. No signup required. Share your screen, camera, and voice with anyone." />
+		<meta name="theme-color" content="#6366f1" />
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="LoSpeak - Simple Peer-to-Peer Voice Chat" />
+		<meta property="og:description" content="Simple, shareable rooms for peer-to-peer voice chat. No signup required. Share your screen, camera, and voice with anyone." />
+		<meta property="og:image" content="/og-image.svg" />
+		
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="LoSpeak - Simple Peer-to-Peer Voice Chat" />
+		<meta name="twitter:description" content="Simple, shareable rooms for peer-to-peer voice chat. No signup required." />
+		<meta name="twitter:image" content="/og-image.svg" />
+		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		%sveltekit.head%
 	</head>
